// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus005OnBoardEvent.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus005Model {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  repeated pusGroundModel.protobuf.Pus005OnBoardEvent pus005OnBoardEvent = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
  optional ccsds_mal.protobuf.UINTEGER noMonitoringEvents = 4;
  optional ccsds_mal.protobuf.UINTEGER noEventReports = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
  optional ccsds_mal.protobuf.UINTEGER status = 7;
}
